[#86DevUIAlignment][Marcus] feat: removed rersistent drawer and fixed home page styling issue

--- a/src/Component/Style/commonStyle.css
+++ b/src/Component/Style/commonStyle.css
@@ -31,8 +31,7 @@
 }
 
 .main-content {
-  position: relative;
-  top: 80px;
+  padding-top: 80px;
 }
 
 .MuiLinearProgress-barColorPrimary {
